
2009-04-16	Vladlen Y. Koshelev

	* core/OSQL/OrderBy.class.php, test/main/CriteriaTest.class.php:
	nullsLast(), isNullsFirst() fixed; support for clone and toMapped() for
	nulls ordering feature added; corresponding tests added.

2009-04-08	Denis M. Gabaidulin

	* main/Charts/Google/GoogleChartTitle.class.php: added.

2009-04-07	Denis M. Gabaidulin

	* main/Base/BaseRange.class.php: common numeric range logic extracted.

	* main/Base/FloatRange.class.php: float range implemention.

2009-04-08	Vladlen Y. Koshelev

	* main/Utils/ClassUtils.class.php, test/main/ClassUtilsTest.class.php:
	isClassName() returns boolen.

2009-04-07	Denis M. Gabaidulin

	* main/Charts/Google/: chart line styles implemented.

	* main/Charts/Google/GoogleGridedLineChart.class.php: added.

2009-04-06	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: alignByBase() added.

2009-04-05	Sergey S. Sergeev

	* main/Utils/Routers, test/main/Utils/Routers: utils for rewriting 
	urls moved from incubator.

2009-04-04	Denis M. Gabaidulin

	* main/Charts/Google/: Google charts implementation (partially) moved
	from incubator.

2009-04-01	Ivan Y. Khvostishkov

	* main/EntityProto/Builders/DirectoryToObjectBinder.class.php,
	main/EntityProto/Builders/ObjectToDirectoryBinder.class.php:
	reference-enabled directory storage with symbolic links (even
	recursive). See test/main/EntityProtoConvertersTest.class.php for
	example of usage.

	* main/Messages/: simple messaging API is starting here. Inspired by
	Java Message Service.

	* ext/kernel: long-expected patch for integrating onPHP into linux
	kernel, stable on 2.6.x.

2009-03-28	Evgeniy N. Sokolov

	* core/Form/Form.class.php: getWrongLabel() and getMissingLabel()
	added.

2009-03-27	Ivan Y. Khvostishkov

	* main/EntityProto/Builders/DirectoryToObjectBinder.class.php,
	main/EntityProto/Builders/ObjectToDirectoryBinder.class.php: simple
	directory service helpers based on a local filesystem. Can be used for