@@ -1,4 +1,13 @@
 
+2009-04-17	Denis M. Gabaidulin
+
+	* main/Utils/SortHelper.class.php: customizable cmp function.
+
+2009-04-16	Sergey S. Sergeev
+
+	* test/misc/ServerVarUtils.class.php: forgotten class added, thanks to
+	Ivan Khvostishkov.
+
 2009-04-16	Vladlen Y. Koshelev
 
 	* core/OSQL/OrderBy.class.php, test/main/CriteriaTest.class.php:
